Another attempt to fix horizontal scroll

--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -14,6 +14,7 @@ body {
 }
 
 .page-body {
+  overflow: hidden;
   @media (min-width: $screen-sm) {
     position: relative;
     padding-top: 137px;
